# 3DViewer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: RuntimeDeployment.cmake
data/: basemap.json  layers.json
data/model/: Box.stl
data/vector/全国省/: 全国省.dbf  全国省.qix  全国省.sbn  全国省.sbx  全国省.shp.xml  全国省.shx
data/vector/北京市_道路/: README  北京市_道路.shx
docs/: 2026-04-30-3dviewer-implementation-plan.md
docs/architecture/: 3dviewer-architecture.md
docs/followups/: 2026-05-08-product-roadmap.md  2026-05-10-status-and-next-steps.md  chart-support-plan.md  netcdf-support-plan.md
docs/notes/: runtime-deployment.md
docs/setup/: deps-layout.md  windows-development-environment.md
docs/superpowers/plans/: 2026-05-08-map-config-layer-persistence.md  2026-05-10-measurement-management.md  2026-05-10-measurement-results-dock.md  2026-05-10-project-save-open.md
docs/superpowers/specs/: 2026-05-07-usability-ui-optimization-design.md  2026-05-08-map-config-layer-persistence-design.md  2026-05-10-measurement-management-design.md  2026-05-10-measurement-results-dock-design.md
packaging/: fonts.conf
resources/: style.qss
scripts/: bootstrap-dev-env.ps1  build-dev.ps1  check-windows-env.ps1  configure-dev.ps1
src/: main.cpp
src/app/: ApplicationController.cpp  ApplicationController.h  MainWindow.cpp  MainWindow.h  ScreenshotSave.cpp  ScreenshotSave.h
src/common/: GdalRuntime.cpp  GdalRuntime.h  Logging.cpp  Logging.h
src/data/: BasemapUrlTemplate.h  DataImporter.cpp  DataImporter.h  DataSourceDescriptor.h  GdalDatasetInspector.cpp  GdalDatasetInspector.h  LayerConfig.cpp  LayerConfig.h  MapConfig.cpp  MapConfig.h  ProjectConfig.cpp  ProjectConfig.h  VectorFeatureQuery.cpp  VectorFeatureQuery.h
src/globe/: GlobeWidget.cpp  GlobeWidget.h  InputMapping.h  MeasurementUtils.h  PickResult.h  SceneController.cpp  SceneController.h
src/layers/: ChartLayer.h  ElevationLayer.h  GeographicBounds.h  ImageryLayer.h  Layer.cpp  Layer.h  LayerManager.cpp  LayerManager.h  LayerTypes.h  MeasurementLayerData.h  ModelLayer.h  ScientificLayer.h  VectorLayer.h
src/tools/: MapTool.h  MeasureAreaTool.cpp  MeasureAreaTool.h  MeasureTool.cpp  MeasureTool.h  PanTool.h  PickTool.cpp  PickTool.h  ToolManager.cpp  ToolManager.h
src/ui/: IconManager.cpp  IconManager.h  LayerTreeDock.cpp  LayerTreeDock.h  MeasurementResultsDock.cpp  MeasurementResultsDock.h  PropertyDock.cpp  PropertyDock.h  StatusBarController.cpp  StatusBarController.h
tests/: CMakeLists.txt
tests/app/: ApplicationSmokeTests.cpp  ScreenshotSaveTests.cpp
tests/common/: GdalRuntimeTests.cpp
tests/data/: DataImporterTests.cpp  GdalDatasetInspectorTests.cpp  LayerConfigTests.cpp  MapConfigTests.cpp  ProjectConfigTests.cpp  VectorFeatureQueryTests.cpp
tests/globe/: InputMappingTests.cpp  MeasurementUtilsTests.cpp  SceneControllerTests.cpp
tests/layers/: LayerManagerTests.cpp
